// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Provider/> renders with custom theme 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <W.Provider
    theme={
      Object {
        "fontSizes": Array [
          12,
          16,
          18,
          24,
          36,
          48,
          72,
        ],
        "fonts": "Avenir Next",
        "space": Array [
          0,
          6,
          12,
          18,
          24,
          30,
          36,
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Root />,
      "theme": Object {
        "breakpoints": Array [
          "24em",
          "32em",
          "48em",
          "64em",
          "80em",
        ],
        "colors": Object {
          "B10": "#3ECBFF",
          "B20": "#00B7FA",
          "B30": "#00A7E4",
          "B40": "#009AD3",
          "B5": "#B1EAFF",
          "B50": "#008CC0",
          "B60": "#007099",
          "B7": "#7CDCFF",
          "B70": "#004660",
          "BLACK": "#000",
          "G10": "#4DD257",
          "G20": "#3BBC45",
          "G30": "#29A634",
          "G40": "#238C2C",
          "G5": "#74FD7F",
          "G50": "#1D7324",
          "G7": "#55E560",
          "N1": "#FBFBFB",
          "N10": "#6C869B",
          "N2": "#EFF3F6",
          "N20": "#60798E",
          "N3": "#E2EAF2",
          "N30": "#566E82",
          "N4": "#CED9E3",
          "N40": "#4D6171",
          "N5": "#BECEDC",
          "N50": "#394B59",
          "N6": "#9DB3C6",
          "N60": "#293742",
          "N7": "#90A9BF",
          "N70": "#202B33",
          "N8": "#87A0B5",
          "N80": "#182026",
          "N9": "#768FA4",
          "N90": "#10161A",
          "O10": "#FFC40D",
          "O20": "#FFAC23",
          "O30": "#FA9B00",
          "O40": "#EF8100",
          "O5": "#FFEA81",
          "O50": "#E15B00",
          "O7": "#FFDA49",
          "P10": "#998DD9",
          "P20": "#8777D9",
          "P30": "#6554C0",
          "P40": "#5243AA",
          "P5": "#EAE6FF",
          "P50": "#403294",
          "P7": "#C0B6F2",
          "R10": "#FF5252",
          "R20": "#F22828",
          "R30": "#DC1F1F",
          "R40": "#C61515",
          "R5": "#FFADAD",
          "R50": "#B40404",
          "R7": "#FF8383",
          "T10": "#79E2F2",
          "T20": "#00C7E6",
          "T30": "#00B8D9",
          "T40": "#00A3BF",
          "T5": "#E6FCFF",
          "T50": "#008DA6",
          "T7": "#B3F5FF",
          "WHITE": "#FFF",
        },
        "fontSizes": Array [
          12,
          16,
          18,
          24,
          36,
          48,
          72,
        ],
        "fontWeights": Object {
          "bold": 700,
          "normal": 400,
          "strong": 500,
          "xbold": 900,
        },
        "fonts": "Avenir Next",
        "letterSpacings": Object {
          "caps": "0.25em",
          "normal": "normal",
        },
        "lineHeights": Array [
          1,
          1.125,
          1.25,
          1.5,
        ],
        "radii": Array [
          "0rem",
          "0.1rem",
          "0.2rem",
          "0.3rem",
          "0.4rem",
        ],
        "space": Array [
          0,
          6,
          12,
          18,
          24,
          30,
          36,
        ],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Root />,
        "theme": Object {
          "breakpoints": Array [
            "24em",
            "32em",
            "48em",
            "64em",
            "80em",
          ],
          "colors": Object {
            "B10": "#3ECBFF",
            "B20": "#00B7FA",
            "B30": "#00A7E4",
            "B40": "#009AD3",
            "B5": "#B1EAFF",
            "B50": "#008CC0",
            "B60": "#007099",
            "B7": "#7CDCFF",
            "B70": "#004660",
            "BLACK": "#000",
            "G10": "#4DD257",
            "G20": "#3BBC45",
            "G30": "#29A634",
            "G40": "#238C2C",
            "G5": "#74FD7F",
            "G50": "#1D7324",
            "G7": "#55E560",
            "N1": "#FBFBFB",
            "N10": "#6C869B",
            "N2": "#EFF3F6",
            "N20": "#60798E",
            "N3": "#E2EAF2",
            "N30": "#566E82",
            "N4": "#CED9E3",
            "N40": "#4D6171",
            "N5": "#BECEDC",
            "N50": "#394B59",
            "N6": "#9DB3C6",
            "N60": "#293742",
            "N7": "#90A9BF",
            "N70": "#202B33",
            "N8": "#87A0B5",
            "N80": "#182026",
            "N9": "#768FA4",
            "N90": "#10161A",
            "O10": "#FFC40D",
            "O20": "#FFAC23",
            "O30": "#FA9B00",
            "O40": "#EF8100",
            "O5": "#FFEA81",
            "O50": "#E15B00",
            "O7": "#FFDA49",
            "P10": "#998DD9",
            "P20": "#8777D9",
            "P30": "#6554C0",
            "P40": "#5243AA",
            "P5": "#EAE6FF",
            "P50": "#403294",
            "P7": "#C0B6F2",
            "R10": "#FF5252",
            "R20": "#F22828",
            "R30": "#DC1F1F",
            "R40": "#C61515",
            "R5": "#FFADAD",
            "R50": "#B40404",
            "R7": "#FF8383",
            "T10": "#79E2F2",
            "T20": "#00C7E6",
            "T30": "#00B8D9",
            "T40": "#00A3BF",
            "T5": "#E6FCFF",
            "T50": "#008DA6",
            "T7": "#B3F5FF",
            "WHITE": "#FFF",
          },
          "fontSizes": Array [
            12,
            16,
            18,
            24,
            36,
            48,
            72,
          ],
          "fontWeights": Object {
            "bold": 700,
            "normal": 400,
            "strong": 500,
            "xbold": 900,
          },
          "fonts": "Avenir Next",
          "letterSpacings": Object {
            "caps": "0.25em",
            "normal": "normal",
          },
          "lineHeights": Array [
            1,
            1.125,
            1.25,
            1.5,
          ],
          "radii": Array [
            "0rem",
            "0.1rem",
            "0.2rem",
            "0.3rem",
            "0.4rem",
          ],
          "space": Array [
            0,
            6,
            12,
            18,
            24,
            30,
            36,
          ],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<Provider/> should renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <W.Provider
    theme={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Root />,
      "theme": Object {
        "breakpoints": Array [
          "24em",
          "32em",
          "48em",
          "64em",
          "80em",
        ],
        "colors": Object {
          "B10": "#3ECBFF",
          "B20": "#00B7FA",
          "B30": "#00A7E4",
          "B40": "#009AD3",
          "B5": "#B1EAFF",
          "B50": "#008CC0",
          "B60": "#007099",
          "B7": "#7CDCFF",
          "B70": "#004660",
          "BLACK": "#000",
          "G10": "#4DD257",
          "G20": "#3BBC45",
          "G30": "#29A634",
          "G40": "#238C2C",
          "G5": "#74FD7F",
          "G50": "#1D7324",
          "G7": "#55E560",
          "N1": "#FBFBFB",
          "N10": "#6C869B",
          "N2": "#EFF3F6",
          "N20": "#60798E",
          "N3": "#E2EAF2",
          "N30": "#566E82",
          "N4": "#CED9E3",
          "N40": "#4D6171",
          "N5": "#BECEDC",
          "N50": "#394B59",
          "N6": "#9DB3C6",
          "N60": "#293742",
          "N7": "#90A9BF",
          "N70": "#202B33",
          "N8": "#87A0B5",
          "N80": "#182026",
          "N9": "#768FA4",
          "N90": "#10161A",
          "O10": "#FFC40D",
          "O20": "#FFAC23",
          "O30": "#FA9B00",
          "O40": "#EF8100",
          "O5": "#FFEA81",
          "O50": "#E15B00",
          "O7": "#FFDA49",
          "P10": "#998DD9",
          "P20": "#8777D9",
          "P30": "#6554C0",
          "P40": "#5243AA",
          "P5": "#EAE6FF",
          "P50": "#403294",
          "P7": "#C0B6F2",
          "R10": "#FF5252",
          "R20": "#F22828",
          "R30": "#DC1F1F",
          "R40": "#C61515",
          "R5": "#FFADAD",
          "R50": "#B40404",
          "R7": "#FF8383",
          "T10": "#79E2F2",
          "T20": "#00C7E6",
          "T30": "#00B8D9",
          "T40": "#00A3BF",
          "T5": "#E6FCFF",
          "T50": "#008DA6",
          "T7": "#B3F5FF",
          "WHITE": "#FFF",
        },
        "fontSizes": Array [
          "0.7rem",
          "0.8rem",
          "0.9rem",
          "1rem",
          "1.2rem",
          "1.4rem",
          "1.6rem",
          "1.8rem",
          "2rem",
        ],
        "fontWeights": Object {
          "bold": 700,
          "normal": 400,
          "strong": 500,
          "xbold": 900,
        },
        "fonts": "-apple-system, BlinkMacSystemFont, Helvetica, \\"Helvetica Neue\\", system-ui, sans-serif",
        "letterSpacings": Object {
          "caps": "0.25em",
          "normal": "normal",
        },
        "lineHeights": Array [
          1,
          1.125,
          1.25,
          1.5,
        ],
        "radii": Array [
          "0rem",
          "0.1rem",
          "0.2rem",
          "0.3rem",
          "0.4rem",
        ],
        "space": Array [
          0,
          4,
          8,
          16,
          32,
          64,
          128,
        ],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Root />,
        "theme": Object {
          "breakpoints": Array [
            "24em",
            "32em",
            "48em",
            "64em",
            "80em",
          ],
          "colors": Object {
            "B10": "#3ECBFF",
            "B20": "#00B7FA",
            "B30": "#00A7E4",
            "B40": "#009AD3",
            "B5": "#B1EAFF",
            "B50": "#008CC0",
            "B60": "#007099",
            "B7": "#7CDCFF",
            "B70": "#004660",
            "BLACK": "#000",
            "G10": "#4DD257",
            "G20": "#3BBC45",
            "G30": "#29A634",
            "G40": "#238C2C",
            "G5": "#74FD7F",
            "G50": "#1D7324",
            "G7": "#55E560",
            "N1": "#FBFBFB",
            "N10": "#6C869B",
            "N2": "#EFF3F6",
            "N20": "#60798E",
            "N3": "#E2EAF2",
            "N30": "#566E82",
            "N4": "#CED9E3",
            "N40": "#4D6171",
            "N5": "#BECEDC",
            "N50": "#394B59",
            "N6": "#9DB3C6",
            "N60": "#293742",
            "N7": "#90A9BF",
            "N70": "#202B33",
            "N8": "#87A0B5",
            "N80": "#182026",
            "N9": "#768FA4",
            "N90": "#10161A",
            "O10": "#FFC40D",
            "O20": "#FFAC23",
            "O30": "#FA9B00",
            "O40": "#EF8100",
            "O5": "#FFEA81",
            "O50": "#E15B00",
            "O7": "#FFDA49",
            "P10": "#998DD9",
            "P20": "#8777D9",
            "P30": "#6554C0",
            "P40": "#5243AA",
            "P5": "#EAE6FF",
            "P50": "#403294",
            "P7": "#C0B6F2",
            "R10": "#FF5252",
            "R20": "#F22828",
            "R30": "#DC1F1F",
            "R40": "#C61515",
            "R5": "#FFADAD",
            "R50": "#B40404",
            "R7": "#FF8383",
            "T10": "#79E2F2",
            "T20": "#00C7E6",
            "T30": "#00B8D9",
            "T40": "#00A3BF",
            "T5": "#E6FCFF",
            "T50": "#008DA6",
            "T7": "#B3F5FF",
            "WHITE": "#FFF",
          },
          "fontSizes": Array [
            "0.7rem",
            "0.8rem",
            "0.9rem",
            "1rem",
            "1.2rem",
            "1.4rem",
            "1.6rem",
            "1.8rem",
            "2rem",
          ],
          "fontWeights": Object {
            "bold": 700,
            "normal": 400,
            "strong": 500,
            "xbold": 900,
          },
          "fonts": "-apple-system, BlinkMacSystemFont, Helvetica, \\"Helvetica Neue\\", system-ui, sans-serif",
          "letterSpacings": Object {
            "caps": "0.25em",
            "normal": "normal",
          },
          "lineHeights": Array [
            1,
            1.125,
            1.25,
            1.5,
          ],
          "radii": Array [
            "0rem",
            "0.1rem",
            "0.2rem",
            "0.3rem",
            "0.4rem",
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<Provider/> should set stylesheet 1`] = `
<style
  type="text/css"
>
  
*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  font-size: 20px;
  line-height: 1.5;
  -webkit-tap-highlight-color: transparent;
}

body {
  background: #FFF;
  color: #293742;
  font-family: -apple-system, BlinkMacSystemFont, Helvetica, "Helvetica Neue", system-ui, sans-serif;
  font-size: 0.8rem;
  overflow-x: hidden;
  text-rendering: optimizeLegibility;
}

a {
  font-family: Helvetica, "Helvetica Neue", system-ui, sans-serif;
}


</style>
`;
